# mjcglib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  changelog.md
include/mygl/: AppFrame.hpp  Camera.hpp  FrameBuffer.hpp  IdManager.hpp  Material.hpp  MathUtil.hpp  PlaneGenerator.hpp  Scene.hpp  SceneLight.hpp  SceneObject.hpp  Shader.hpp  Texture.hpp  TextureManager.hpp  VectorMath.hpp  VertexFormat.hpp
include/mylib/: lib.h
src/: AppFrame.cpp  Camera.cpp  FrameBuffer.cpp  IdManager.cpp  Material.cpp  PlaneGenerator.cpp  Scene.cpp  SceneLight.cpp  SceneObject.cpp  Shader.cpp  Texture.cpp  TextureManager.cpp  VectorMath.cpp  VertexFormat.cpp  mylib.cc
src/app/: app0.cpp  app1.cpp
